# fungi

./: AUTHORS  Makefile.am  README  aclocal.m4  configure.ac
samples/: factorial.bf  iteration.bf
src/: Makefile.am  cartographer.c  debug.c  fungi.c  fungi.h  interpreter.c  main.c  main.h  stack.c  stack.h  utils.c  utils.h
